tests/baselines/reference/parserSkippedTokens3.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens3.ts(1,1): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens3.ts(1,5): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens3.ts (2 errors) ====
    \ ; \
    
!!! error TS1127: Invalid character.
        
!!! error TS1127: Invalid character.